<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tuty Fruty Slot for Android</string>
    <string name="spin_button_label">SPIN</string>
    <string name="payout_button_label">PAYOUT</string>
    <string name="lines_button_label">LINES</string>
    <string name="bet_button_label">BET</string>
    <string name="max_bet_button_label">MAX BET</string>
    <string name="autoplay_button_label">AUTOPLAY</string>

</resources>