<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/foreground"
        android:paddingStart="13dp"
        android:paddingTop="10dp"
        android:paddingEnd="13dp"
        android:paddingBottom="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol00"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:scaleType="fitCenter"
                android:src="@drawable/symbol00" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol01" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol02" />


            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol03" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol04" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol05" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol06" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol07" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol08" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol41"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol09" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol00" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol01" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol02" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol03" />

            <com.gladness.merriment.treat.hilaritypro.PrizesView
                android:id="@+id/symbol42"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3px"
                android:layout_weight="2"
                android:src="@drawable/symbol04" />
        </TableRow>
    </TableLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="BET:"
                android:textColor="@color/title_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="LINES:"
                android:textColor="@color/title_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="TOTAL\n   BET:"
                android:textColor="@color/title_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="WINNER\n    PAID:"
                android:textColor="@color/title_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="CREDIT:"
                android:textColor="@color/title_color" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/single_bet_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="00"
                android:textColor="@color/value_color" />

            <TextView
                android:id="@+id/active_lines_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="00"
                android:textColor="@color/value_color" />

            <TextView
                android:id="@+id/total_bet_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="0000"
                android:textColor="@color/value_color" />

            <TextView
                android:id="@+id/winner_paied_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="000000"
                android:textColor="@color/value_color" />

            <TextView
                android:id="@+id/credit_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="000000"
                android:textColor="@color/value_color" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:enabled="false"
                android:id="@+id/autoplay_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/autoplay_button_label"
                android:textColor="@color/btn_color" />

            <Button
                android:enabled="false"
                android:id="@+id/payout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/payout_button_label"
                android:textColor="@color/btn_color" />

            <Button

                android:id="@+id/lines_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lines_button_label"
                android:textColor="@color/btn_color" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/max_bet_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/max_bet_button_label"
                android:textColor="@color/btn_color" />

            <Button
                android:id="@+id/bet_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/bet_button_label"
                android:textColor="@color/btn_color" />


            <Button
                android:id="@+id/spin_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/spin_button_label"
                android:textColor="@color/btn_color" />
        </TableRow>
    </TableLayout>

</LinearLayout>